// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Textarea Auto Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 iYKveR sc-lbpGbz UlXOu sc-iNyJHO ePWNyp"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 iYKveR sc-lbpGbz UlXOu sc-iNyJHO ePWNyp"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 lbQXzv sc-lbpGbz crVzCR sc-iNyJHO ePWNyp"
      disabled=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Min Max Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 iYKveR sc-lbpGbz UlXOu sc-iNyJHO ePWNyp"
      rows="4"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 iYKveR sc-lbpGbz eLdIfj sc-iNyJHO ePWNyp"
      placeholder="Type something..."
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Read Only 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 iYKveR sc-lbpGbz UlXOu sc-iNyJHO ePWNyp"
      readonly=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 iYKveR sc-lbpGbz UlXOu sc-iNyJHO ePWNyp"
      placeholder="Type something..."
    />
  </div>
</div>
`;
